<resources>
    <string name="app_name">Lab8</string>
    <string name="hello_message">Hello World!</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="checkbox">CheckBox</string>
    <string name="what_does_this_do">What does this do?</string>
    <string name="radiobutton">RadioButton</string>
    <string name="login_name">login name</string>
    <string name="dialog_title">Please Confirm</string>
    <string name="dialog_message">Are you sure you wish to leave?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="start_chat">Start Chat</string>
    <string name="send">Send</string>
    <string name="weather">Weather</string>
    <string name="id">ID=</string>
    <string name="delete_this_message">DELETE THIS MESSAGE</string>
    <string name="messagehere">Message Here</string>
    <string name="one">One</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="toolbar">Toolbar</string>
    <string name="About">about</string>
    <string name="display_snackbar">Display SnackBar</string>
    <string name="what_is_your_new_message">What is your new message?</string>
    <string name="type_here">Type here</string>
    <string name="new_message">New Message</string>
</resources>
