<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/message_here"
        android:hint="@string/messagehere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/id_here"
        android:hint="@string/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message_here"/>

    <Button
        android:id="@+id/delete_button"
        android:layout_alignParentBottom="true"
        android:text="@string/delete_this_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>